# screen-aware-multimodal-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SESSION_NOTES.md  index.md  run_agent.py  run_app.py
data/: action_policy.json  agent_state.json  decision.json  decision_schema.json  decision_trace_schema.json  human_equivalence_thresholds.json  human_kpi_log_schema.json  human_likeness_kpi_schema.json  humanization_profiles.json  humanization_profiles_schema.json  local_model.json  ocr_config.json  ocr_regions.json  overlay.txt  prompt_template.txt  quest_guides.json  quests.json  ratings.json  reference.json  roi.json  schema.json  snapshot_schema.json  state.json  state_schema.json  tutorial_decision.json  tutorial_island_decisions.json  tutorial_island_decisions_schema.json  tutorial_island_state.json  tutorial_island_state_schema.json  tutorial_text_reference.json  ui_detector_regions.json  ui_fixed_classic.json
docs/: ACTION_CONTEXT_SCHEMA.md  ACTION_TRACE_SCHEMA.md  AUDIT_LOG_SPEC.md  AUTOMATION_CONCEPTS.md  BUG_LOG.md  CALIBRATION_WORKFLOW.md  CAPABILITIES.md  CORE_LOOP.md  DATA_RETENTION_POLICY.md  DECISION_TRACE_SCHEMA.md  DEMO.md  DEPENDENCIES.md  DOCS_CHECKLIST.md  DOCS_INDEX.md  END_STATE.md  EXECUTION_SUMMARY_SCHEMA.md  FEATURE_AUDITS.md  FILENAME_AUDIT.md  FUNCTION_INDEX.md  GIT_STRATEGY.md  HANDS_AND_EYES.md  HANDS_EYES_TODO.md  HANDS_TALK.md  HOW_TO_OPERATE.md  HUMANIZATION_PROFILES.md  HUMAN_EQUIVALENCE.md  HUMAN_LIKENESS_KPI.md  (+33 more)
rust_core/: Cargo.toml
rust_core/src/: capture.rs  detection.rs  integration.rs  lib.rs  types.rs
(+366 files in other folders)
