[package]
name = "osrs_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "osrs_core"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Image processing
image = "0.24"

# Screen capture (Windows)
screenshots = "0.8"

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fast pixel ops
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
